server/vm-k8s/k8s/overlay/prod/demo-index/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-index
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`demo.morawskim.pl`)
      services:
        - kind: Service
          name: demo-index
          port: 80
      middlewares:
        - name: add-x-forwarded-proto
  tls:
    certResolver: myresolver
